kubernetes/connection/gateway.crd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  annotations:
    cert-manager.io/issuer: ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: argocd
    protocol: HTTPS
    port: 443
    hostname: "argocd.localhost"
    tls:
      certificateRefs:
      - kind: Secret
        name: ca
